Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </code></pre>
 
 <ol>
+<li>The Persimmon Plus      Persimmon MJ cuenco Mabolo Cebu City</li>
 <li> Gagfa IT        G/F Gagfa Tower, F. Cabahug St. Cebu City</li>
 <li> JY Square Mall      Salinas Drive cor Gorordo Avenue Lahug Cebu City</li>
 <li> Tune Hotel      36 Archbishop Reyes Avenue Cebu City</li>
@@ -48,9 +49,8 @@
 <li>Apple One       Biliran Road Ayala Business Park Cebu City</li>
 <li>USJR Basak      cebu south Road Brgy Basak Pardo Cebu City</li>
 <li>Plaza Borromeo      Borromeo lV p Lopez St Cebu City</li>
-<li>SWU         Brgy Sambag Aznar St Cebu City</li>
-<li>The Persimmon Plus      Persimmon MJ cuenco Mabolo Cebu City</li>
-<li>Bogo Poblacion      Ferman St Brgy Carbon Bogo City Cebu</li>
+<li><p>SWU         Brgy Sambag Aznar St Cebu City</p></li>
+<li><p>Bogo Poblacion      Ferman St Brgy Carbon Bogo City Cebu</p></li>
 <li>CTU         Cianna Residences P Burgos St Cebu City</li>
 <li>Labangon        Ylanans Property Labangon Cebu City</li>
 <li>Cebu Salinas Drive      Salinas Drive Lahug Cebu City</li>
